--- a/content/data/config.json
+++ b/content/data/config.json
@@ -70,5 +70,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://magenta-crane-82207.netlify.app"
 }
